# moskowitz

./: .gitignore  README.md  pyproject.toml
data/: MomentumQuestion.xls
