[project]
name = "Momentum-Industry-Paper"
version = "0.1.0"
description = "Momentum-Industry-Paper"
requires-python = ">=3.9"
dependencies = [
    # Data analysis core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    
    # Statistical analysis
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    
    # Data I/O
    "openpyxl>=3.1.0",  # Excel support
    "xlsxwriter>=3.1.0",  # Excel writing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
]

